src/objects/RTS_Senior_Manager__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Email list of senior managers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if email is to be sent to this senior</description>
        <inlineHelpText>Check if email is to be sent to this senior</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Email of the senior manager</description>
        <inlineHelpText>Email of the senior manager</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RTS Senior Manager</label>
</CustomObject>